cmake_minimum_required(VERSION 4.0)
project(redacted136)

set(CMAKE_CXX_STANDARD 14)

add_executable(redacted136
        redacted136-home/C++/question1.cpp
        redacted136-home/C++/question2.cpp
        redacted136-home/C++/question3.cpp
        redacted136-home/C++/question4.cpp
        redacted136-home/C++/question5.cpp
        redacted136-home/C++/main.cpp
        redacted136-home/C++/tempCodeRunnerFile.cpp
        redacted136-home/main.cpp
)
